Add vm argument for JDK new version